# eth-interfaces

rpc-specs-tests/: .dockerignore  pyproject.toml  test_rpc_methods.py  validate_tests.py
rpc-specs-tests/schemas/: eth_getBalance.json  eth_getStorageAt.json
rpc-specs-tests/tests/: eth_getBalance.json  eth_getStorageAt.json
